fix: Исправления по ревью + изменения в доке mcp
- Фикс бага с стримом айдишников чатов
- Фикс некорректного получения пути серверных файлов
- Фикс обхода mcp root директорий
- Изменения в документации AttachedFile